--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ p {
 
 .card-white {
 background-color: white;
-box-shadow: 0px 10px 20px rgb(0 0 0 0.1);
+box-shadow: 0px 10px 20px rgb(0 0 0 / 10%);
 border-radius: 4px;
 margin: 30px 0px;
 text-align: center;
@@ -77,6 +77,7 @@ color: white;
 background-color: #046582;
 padding: 10px;
 border-radius: 3px;
+box-shadow: 0px 8px 20px rgb(0 0 0 / 15%);
 }
 
 .btn-blue:hover {
